# shield-plex-dbbackup-2-gdrive

./: .dockerignore  .gitattributes  .gitignore  Makefile  build.sh  compose.yml  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
docker/: Dockerfile  entrypoint.sh
docs/: conf.py  index.rst
shield_plex_dbbackup_2_gdrive/: config.py  main.py
shield_plex_dbbackup_2_gdrive/classes/: backup_file.py
shield_plex_dbbackup_2_gdrive/config_context/: ConfigContext.py  config_context.py
shield_plex_dbbackup_2_gdrive/filesystem/: filesystem.py  gdrive.py  smb.py
shield_plex_dbbackup_2_gdrive/handlers/: base_handler.py  config_handler.py  gdrive_handler.py  shield_handler.py  smb_handler.py
shield_plex_dbbackup_2_gdrive/models/: config.py
shield_plex_dbbackup_2_gdrive/modes/: copy_to_gdrive.py  restore.py
